<resources>
    <string name="app_name">Kid Generation</string>
    <string name="titleDashboard">Dashboard</string>
    <string name="titleParent">Parent Dashboard</string>
    <string name="titleTeacher">Teacher Dashboard</string>
    <string name="titleActivities">Activities</string>
    <string name="titleActivitiesAdd">Add Activities</string>
    <string name="titleActivitiesDetails">Activities Details</string>
    <string name="titleAddAdmission">New Admission</string>
    <string name="titleAdmission">Admission</string>
    <string name="titleAlert">Alert</string>
    <string name="titleAddAlert">Add Alert</string>
    <string name="titleDetailsAlert">Alert Details</string>
    <string name="titleAddAttendance">Add Attendance</string>
    <string name="titleAttendance">Attendance</string>
    <string name="titleAddBranch">Add Branch</string>
    <string name="titleBranch">Branch</string>
    <string name="titleAddCertificate">Add Certificate</string>
    <string name="titleCertificate">Certificate</string>
    <string name="titleAddComplaint">Add Complaint</string>
    <string name="titleComplaint">Complaint</string>
    <string name="titleDetailsComplaint">Complaint Details</string>
    <string name="titleAddCourse">Add Course</string>
    <string name="titleCourse">Course</string>
    <string name="titleAddDaycare">Add Daycare</string>
    <string name="titleDaycare">Daycare</string>
    <string name="titleAddTypeDiary">Add Diary Type</string>
    <string name="titleAddDiary">Add Diary</string>
    <string name="titleDiary">Diary</string>
    <string name="titleDetailsDiary">Diary Details</string>
    <string name="titleAddDivision">Add Division</string>
    <string name="titleDivision">Division</string>
    <string name="titleAddDriver">Add Driver</string>
    <string name="titleDriver">Driver</string>
    <string name="titleAddEnquiry">Add Enquiry</string>
    <string name="titleEnquiry">Enquiry</string>
    <string name="titleAddEvent">Add Event</string>
    <string name="titleEvent">Event</string>
    <string name="titleDetailsEvent">Event Details</string>
    <string name="titleAddExam">Add Exam</string>
    <string name="titleExam">Exam</string>
    <string name="titleAddFees">Add Fees</string>
    <string name="titleFees">Fees</string>
    <string name="titleAddGallery">Add Gallery</string>
    <string name="titleGallery">Gallery</string>
    <string name="titleAddHomework">Add Homework</string>
    <string name="titleHomework">Homework</string>
    <string name="titleAddInventory">Add Inventory</string>
    <string name="titleInventory">Inventory</string>
    <string name="titleAddIssue">Add Issue</string>
    <string name="titleIssue">Issue</string>
    <string name="titleDetailsIssue">Issue Details</string>
    <string name="titleAddLeave">Leave Application</string>
    <string name="titleLeave">Leave Applications</string>
    <string name="titleDetailsLeave">Application Details</string>
    <string name="titleAddLibrary">Add Library</string>
    <string name="titleLibrary">Library</string>
    <string name="titleAddMeeting">Add Meeting</string>
    <string name="titleMeeting">Meeting</string>
    <string name="titleDetailsMeeting">Meeting Details</string>
    <string name="titleAssignModule">Assign Module</string>
    <string name="titleAssignRole">Assign Role</string>
    <string name="titleModule">Module</string>
    <string name="titleAddNotice">Add Notice</string>
    <string name="titleNotice">Notice</string>
    <string name="titleDetailsNotice">Notice Details</string>
    <string name="titleAddNotification">Add Notification</string>
    <string name="titleNotification">Notification</string>
    <string name="titleAddResult">Add Result</string>
    <string name="titleResult">Result</string>
    <string name="titleAddRole">Add Role</string>
    <string name="titleRole">Role</string>
    <string name="titleAddRoute">Add Route</string>
    <string name="titleRoute">Route</string>
    <string name="titleDetailsRoute">Route Details</string>
    <string name="titleAddSchool">Add School</string>
    <string name="titleSchool">School</string>
    <string name="titleSchools">Schools</string>
    <string name="titleDetailsSchool">School Details</string>
    <string name="titleComment">Comments</string>
    <string name="titleAddStaff">Add Staff</string>
    <string name="titleDetailsStaff">Staff Details</string>
    <string name="titleStaff">Staff</string>
    <string name="titleAddStandard">Add Standard</string>
    <string name="titleStandard">Standard</string>
    <string name="titleAddStop">Add Stop</string>
    <string name="titleStop">Stop</string>
    <string name="titleAddStudent">Add Student</string>
    <string name="titleStudent">Student</string>
    <string name="titleAddSubject">Add Subject</string>
    <string name="titleSubject">Subject</string>
    <string name="titleAddTimetable">Add TimeTable</string>
    <string name="titleTimetable">TimeTable</string>
    <string name="titleAddTransport">Add Transport</string>
    <string name="titleTransport">Transport</string>
    <string name="titleAddTracking">Add Tracking</string>
    <string name="titleTracking">Tracking</string>
    <string name="titleAddUser">Add User</string>
    <string name="titleUser">User</string>
    <string name="titleAddVehicle">Add Vehicle</string>
    <string name="titleAddTypeVehicle">Add Vehicle Type</string>
    <string name="titleVehicle">Vehicle</string>
    <string name="successAdd">Successfully save.</string>
    <string name="successUpdate">Successfully update.</string>
    <string name="successDelete">Successfully delete.</string>
    <string name="successWritten">Document successfully written!</string>
    <string name="successUpdated">Document successfully updated!</string>
    <string name="successDeleted">Document successfully deleted!</string>
    <string name="errorAdd">Enable to save, Try again.</string>
    <string name="errorUpdate">Enable to update, Try again.</string>
    <string name="errorDelete">Enable to delete, Try again.</string>
    <string name="errorLoad">Enable to load, Try again.</string>
    <string name="errorNotFound">No data found</string>
    <string name="errorListenFailed">Listen failed.</string>
    <string name="errorWritten">Error writing document</string>
    <string name="errorUpdating">Error updating document</string>
    <string name="errorDeleting">Error deleting document</string>
    <string name="buttonAdd">ADD</string>
    <string name="buttonEdit">EDIT</string>
    <string name="buttonUpdate">UPDATE</string>
    <string name="buttonDelete">DELETE</string>
    <string name="buttonSave">SAVE</string>
    <string name="buttonRemove">REMOVE</string>
    <string name="buttonYes">Yes</string>
    <string name="buttonNo">No</string>
    <string name="buttonSubmit">Submit</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonNext">Next</string>
    <string name="buttonBack">Back</string>
    <string name="buttonRefresh">Refresh</string>
    <string name="keyA">a</string>
    <string name="keyActivities">activities</string>
    <string name="keyAlert">alert</string>
    <string name="keyB">b</string>
    <string name="keyC">c</string>
    <string name="keyChatId">chatId</string>
    <string name="keyComplaint">complaint</string>
    <string name="keyD">d</string>
    <string name="keyDescription">description</string>
    <string name="keyDiary">diary</string>
    <string name="keyE">e</string>
    <string name="keyEvent">event</string>
    <string name="keyF">f</string>
    <string name="keyG">g</string>
    <string name="keyH">h</string>
    <string name="keyI">i</string>
    <string name="keyIssue">issue</string>
    <string name="keyJ">j</string>
    <string name="keyK">k</string>
    <string name="keyL">l</string>
    <string name="keyLeave">leave</string>
    <string name="keyM">m</string>
    <string name="keyMeeting">meeting</string>
    <string name="keyModule">module</string>
    <string name="keyModuleNumber">moduleNumber</string>
    <string name="keyN">n</string>
    <string name="keyNotice">notice</string>
    <string name="keyO">o</string>
    <string name="keyP">p</string>
    <string name="keyQ">q</string>
    <string name="keyR">r</string>
    <string name="keyRoute">route</string>
    <string name="keyS">w</string>
    <string name="keySetting">setting</string>
    <string name="keySchool">school</string>
    <string name="keyStaff">staff</string>
    <string name="keyStandards">standards</string>
    <string name="keyT">t</string>
    <string name="keyTitle">title</string>
    <string name="keyU">u</string>
    <string name="keyV">v</string>
    <string name="keyW">w</string>
    <string name="keyX">x</string>
    <string name="keyY">y</string>
    <string name="keyZ">z</string>
    <string name="fieldAccessible">accessible</string>
    <string name="fieldAccessibleAdd">accessibleAdd</string>
    <string name="fieldAccessibleUpdate">accessibleUpdate</string>
    <string name="fieldAccessibleDelete">accessibleDelete</string>
    <string name="fieldAverageRating">averageRating</string>
    <string name="fieldBad">bad</string>
    <string name="fieldCreatedAt">createdAt</string>
    <string name="fieldCreatedBy">createdBy</string>
    <string name="fieldCreatedById">createdById</string>
    <string name="fieldDate">date</string>
    <string name="fieldDay">day</string>
    <string name="fieldDivision">division</string>
    <string name="fieldDivisionId">divisionId</string>
    <string name="fieldDivisionIds">divisionIds</string>
    <string name="fieldExcellent">excellent</string>
    <string name="fieldf"></string>
    <string name="fieldFirstName">firstName</string>
    <string name="fieldGood">good</string>
    <string name="fieldGreat">great</string>
    <string name="fieldHasData">hasData</string>
    <string name="fieldi"></string>
    <string name="fieldj"></string>
    <string name="fieldk"></string>
    <string name="fieldLectureNumber">lectureNumber</string>
    <string name="fieldLikes">likes</string>
    <string name="fieldm"></string>
    <string name="fieldName">name</string>
    <string name="fieldo"></string>
    <string name="fieldp"></string>
    <string name="fieldq"></string>
    <string name="fieldRating">rating</string>
    <string name="fieldRatings">ratings</string>
    <string name="fieldRole">role</string>
    <string name="fieldSchoolId">schoolId</string>
    <string name="fieldStatus">status</string>
    <string name="fieldStatusComplaint">statusComplaint</string>
    <string name="fieldStatusIssue">statusIssue</string>
    <string name="fieldStatusLeave">statusLeave</string>
    <string name="fieldStandard">standard</string>
    <string name="fieldStandardId">standardId</string>
    <string name="fieldStandardIds">standardIds</string>
    <string name="fieldStop">stop</string>
    <string name="fieldStudentId">studentId</string>
    <string name="fieldStudentIds">studentIds</string>
    <string name="fieldSubjectName">subjectName</string>
    <string name="fieldTerrible">terrible</string>
    <string name="fieldTime">time</string>
    <string name="fieldTotalLikes">totalLikes</string>
    <string name="fieldTotalComments">totalComments</string>
    <string name="fieldType">type</string>
    <string name="fieldU"></string>
    <string name="fieldV"></string>
    <string name="fieldW"></string>
    <string name="helperRequired">Required*</string>
    <string name="limitMaxAlertTitle">25</string>
    <string name="limitMaxAlertDetails">250</string>
    <string name="hintAlertTitle">Title</string>
    <string name="hintAlertDetails">Details</string>
    <string name="txtAttendancePresent">Present</string>
    <string name="txtAttendanceAbsent">Absent</string>
    <string name="txtAttendanceHalfDay">Half Day</string>
    <string name="txtAttendanceHoliday">Holiday</string>
    <string name="txtAttendanceLeave">Leave</string>
</resources>